Archive2/aa/c87d4f221bb0a2/output
main.cpp:14:1: error: expected ',' or '...' before '}' token
 };
 ^
main.cpp:14:1: error: expected ')' before '}' token
main.cpp:13:14: error: expected ';' at end of member declaration
     abc(bool b
              ^
